# insperdatasets

./: pyproject.toml
src/insperdatasets/: __init__.py  get_dataset.py
src/insperdatasets/core/: datasets.py
src/insperdatasets/resources/: datasets.toml
tests/: test_get_dataset.py
