[project]
name = "insperdatasets"
version = "0.1.0"
description = "Datasets for the InsperML group"
readme = "README.md"
authors = [
    { name = "Tiago Tavares", email = "tiagoft@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "toml>=0.10.2",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
